Se agregaron un input para buscar y un paginator desde angular material

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,5 +2,13 @@
 	<mat-toolbar color="primary" class="header">
 	  <img src="../../../assets/img/logo.png" alt="logo">
 	  <h1 class="mainTitle">Pokedex</h1>
+	  <span class="spacer"></span>
+	  <form class="">
+		<mat-form-field class="buscar" appearance="legacy">
+		  <mat-label>Buscar</mat-label>
+		  <input matInput placeholder="Ex. pikachu" value="">
+		  <mat-icon matSuffix>search</mat-icon>
+		</mat-form-field>
+	  </form>
 	</mat-toolbar>
 </header>
