--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -5,3 +5,12 @@
 .mainTitle {
 	margin-left: 20px;
 }
+
+.spacer {
+	flex: 1 1 auto;
+}
+
+.buscar {
+	width: 20rem;
+	padding: 20px 0px 0px 20px;
+}
