--- a/src/app/components/pokemon/pokemon.component.scss
+++ b/src/app/components/pokemon/pokemon.component.scss
@@ -17,3 +17,11 @@
 	font-weight: bold;
 	font-size: 1.2rem;
 }
+
+.paginator {
+	background: #b90f48;
+	color: #FFF;
+	display: flex;
+	justify-content: center;
+	font-size: .8rem;
+}
