- Ahora el header es estatico - Se hicieron cambios menores en el paginator

--- a/src/app/components/pokemon/pokemon.component.scss
+++ b/src/app/components/pokemon/pokemon.component.scss
@@ -1,5 +1,6 @@
 .pokeGrid {
 	display: grid;
+	margin-top: 70px;
 	padding: 20px;
 	gap: 16px;
 	grid-template-columns: repeat(auto-fit, minmax(23%, 1fr));
