--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,12 +3,14 @@
 	  <img src="../../../assets/img/logo.png" alt="logo">
 	  <h1 class="mainTitle">Pokedex</h1>
 	  <span class="spacer"></span>
-	  <form class="">
+	  <div class="">
 		<mat-form-field class="buscar" appearance="legacy">
 		  <mat-label>Buscar</mat-label>
-		  <input matInput placeholder="Ex. pikachu" value="">
-		  <mat-icon matSuffix>search</mat-icon>
+		  <input matInput placeholder="Ex. pikachu" type="text" #buscarPokemon (keyup.enter)="buscarPokemons(buscarPokemon.value)">
+		  <button mat-button matSuffix (click)="buscarPokemons(buscarPokemon.value)">
+			  <mat-icon>search</mat-icon>
+		  </button>
 		</mat-form-field>
-	  </form>
+	  </div>
 	</mat-toolbar>
 </header>
