--- a/src/app/components/pokemon/pokemon.component.html
+++ b/src/app/components/pokemon/pokemon.component.html
@@ -1,7 +1,8 @@
+<app-header (pokeBusqueda)="buscarPokemons($event)"></app-header>
 <div class="pokeGrid">
 	<div class="card" *ngFor="let pokemon of pokemons">
 		<h3>{{pokemon.name | titlecase}}</h3>
-		<img [src]="pokemon.sprites.front_default" alt="{{pokemon.name}}">
+		<img [src]="pokemon.sprites.other.dream_world.front_default" alt="{{pokemon.name}}">
 		<p>
 			<b>Tipo: </b><span>{{pokemon.types[0].type.name}}</span>
 		</p>
